--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
   "name": "molgenis-data-finder",
   "version": "0.1.0",
-  "private": true,
+  "description": "Data finder",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@molgenis-ui/components-library": "^2.4.4",
+    "@molgenis/molgenis-api-client": "^3.1.4",
+    "@molgenis/molgenis-ui-context": "^1.6.5",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
@@ -23,8 +31,16 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "generate-json-webpack-plugin": "^1.0.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
-  }
+    "typescript": "~4.1.5",
+    "vue-template-compiler": "^2.6.11",
+    "zip-webpack-plugin": "^3.0.0"
+  },
+  "authors": [
+    "David Ruvolo <d.c.ruvolo@rug.nl>",
+    "Max Postema <m.e.postema@rug.nl>"
+  ],
+  "license": ""
 }
