--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@molgenis/molgenis-api-client": "^3.1.4",
     "@molgenis/molgenis-ui-context": "^1.6.5",
     "axios": "^0.21.1",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
@@ -40,7 +41,6 @@
   },
   "peerDependencies": {
     "bootstrap": "4.1.3",
-    "jquery": "1.9.1",
     "popper.js": "1.14.3"
   },
   "authors": [
